# telegram-slskd-local-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  codecov.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  docker-publish.yml  dockerhub-description.yml  lint.yml  release.yml  tests.yml
docs/: CHANGELOG.md
scripts/: entrypoint.sh
src/music_downloader/: __init__.py  __main__.py  config.py
src/music_downloader/bot/: handlers.py  keyboards.py
src/music_downloader/metadata/: playlist.py  spotify.py
src/music_downloader/persistence/: __init__.py  database.py  history_repo.py  import_repo.py
src/music_downloader/processor/: file_handler.py  flac_analyzer.py
src/music_downloader/search/: scorer.py  slskd_client.py
src/music_downloader/tools/: artwork_embedder.py  embed_artwork.py
tests/: test_artwork_embedder.py  test_config.py  test_config_extended.py  test_database_extended.py  test_embed_artwork.py  test_file_handler.py  test_file_handler_extended.py  test_flac_analyzer.py  test_handlers.py  test_handlers_comprehensive.py  test_handlers_download.py  test_history_repo.py  test_import_handlers.py  test_import_repo.py  test_keyboards.py  test_main.py  test_main_extended.py  test_playlist.py  test_scorer.py  test_slskd_client.py  test_slskd_search_inner.py  test_spotify.py  test_spotify_extended.py
